--- a/shared.css
+++ b/shared.css
@@ -2,15 +2,44 @@ body {
     font-family: "Quicksand", sans-serif;
     margin: 0;
 }
+
+header {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 0px;
+}
+
 #homenav {
     text-decoration: none;
     color:gold;
-    margin: 5px 5px 0 0;
+    margin: 5px 5px 0px 0px;
     text-shadow: 1px 1px 2px rgb(0, 0, 0);
 }
 
 #pagehome {
     padding: 10px;
     font-family: "Lato", sans-serif;
-    font-size: 40px;
+    font-size: 30px;
+}
+
+a{
+    text-decoration: none;
+    color: gold;
+}
+
+ul{
+    list-style: none;
+    width: 250px;
+    padding: 0;
+    display: flex;
+    justify-content:flex-end;
+}
+
+.head{
+    text-align: right;
+    width: 100px;
+    padding-right: 60px;
 }
