--- a/shared.css
+++ b/shared.css
@@ -20,7 +20,7 @@ header {
 }
 
 #pagehome {
-    padding: 10px;
+    padding: 0px 10px;
     font-family: "Lato", sans-serif;
     font-size: 30px;
 }
