--- a/style.css
+++ b/style.css
@@ -1,3 +1,51 @@
-#pagehome {
+#upper {
+  height: 800px;
+  background-image: url("/Info_Page_Website/images/places/Pagaruyung.jpg");
+  background-position: center;
+  background-size: cover;
+  flex-wrap: wrap;
+}
 
+#uppercontent {
+    width: 900px;
+    background-color: rgba(51, 47, 47, 0.8);
+    box-shadow: 2px 4px 8px rgb(68, 67, 67);
+    border-radius: 8px;
+    text-align: center;
+    padding: 50px 0px;
+    margin: 0px auto;
+    position: relative;
+    top: 200px;
+}
+
+#uppercontent h1 {
+    color: cornsilk;
+    text-transform:uppercase ;
+    font-size: 50px;
+    font-family: "Raleway",sans-serif;
+    margin: 0;
+}
+
+#uppercontent p {
+    color:white;
+    text-transform: uppercase;
+    font-size: 24px;
+    font-weight: 300;
+    margin-bottom: 32px;
+}
+
+#uppercontent a{
+    text-decoration: none;
+    background-color: rgb(255, 251, 0);
+    padding: 12px 24px;
+    color: black;
+    font-size: 24px;
+    font-weight: 700;
+    border-radius: 8px;
+    box-shadow: 2px 4px 8px rgb(68, 67, 67);
+
+}
+
+#uppercontent a:hover{
+    background-color: rgb(255, 230, 0);
 }
