--- a/shared.css
+++ b/shared.css
@@ -25,7 +25,7 @@ header {
     padding: 10px;
     font-family: "Mr Dafoe", cursive;
     color:gold;
-    font-size: 50px;
+    font-size: 40px;
     text-decoration: none;
     text-shadow: 1px 1px 2px rgb(0, 0, 0);
 }
@@ -47,8 +47,39 @@ header a{
     border-radius: 6px;
 }
 
-ul a:hover{
+li a:hover{
     color: black;
     background-color: rgb(255, 251, 0); 
+}
+
+footer {
+    background: linear-gradient(70deg, rgb(24,24,24),rgb(25,29,29));
+    padding: 36px 0;
+}
+
+footer ul{
+    display: flex;
+    justify-content: center;;
+}
+footer li{
+    width: 80px;
+    height: 80px;
+    margin: 0 50px;
+}
+
+footer a:hover{
+    background-color: rgb(24,24,24);
+    border-radius: 10px;
+}
+
+#lower p:hover{
+    background-color: rgb(24,24,24);
+    border-radius: 10px;
+    color: white;
+}
+
+footer img{
+    width: 100%;
+    height: 100%;
 }
 
