Completing Landing page and Destination Pages

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+header {
+    position: absolute;
+}
+
 #upper {
   height: 800px;
   background-image: url("/Info_Page_Website/images/places/Pagaruyung.jpg");
