--- a/shared.css
+++ b/shared.css
@@ -14,7 +14,6 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 15px 60px;
-    position: absolute;
     width: 100%;
     top: 0;
     left: 0;
@@ -47,7 +46,7 @@ header a{
     border-radius: 6px;
 }
 
-li a:hover{
+header li a:hover{
     color: black;
     background-color: rgb(255, 251, 0); 
 }
