--- a/places.css
+++ b/places.css
@@ -1,6 +1,5 @@
 main {
     padding: 48px 20px;
-    box-sizing: border-box;
 }
 
 main ul {
@@ -15,7 +14,7 @@ main li {
   display: flex;
   flex-direction: column;
   background-color: var(--card-bg-light);
-  box-shadow: 0 4px 12px var(--shadow-light);
+  box-shadow: 0 5px 20px var(--shadow-light);
   border-radius: 15px;
   overflow: hidden;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -23,16 +22,11 @@ main li {
 
 body.dark-mode main li {
     background-color: var(--card-bg-dark);
-    box-shadow: 0 4px 12px var(--shadow-dark);
 }
 
 main li:hover {
     transform: translateY(-8px);
-    box-shadow: 0 8px 20px var(--shadow-light);
-}
-
-body.dark-mode main li:hover {
-    box-shadow: 0 8px 20px var(--shadow-dark);
+    box-shadow: 0 10px 25px var(--shadow-light);
 }
 
 main li img {
@@ -42,21 +36,28 @@ main li img {
 }
 
 .item {
-  padding: 24px;
+  padding: 25px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   flex-grow: 1;
 }
 
 .item h2 {
-  margin: 0 0 16px 0;
+  font-weight: 600;
+  font-size: 1.8rem;
+  margin: 0 0 1rem 0;
 }
 
 .item p {
-    line-height: 1.6;
+    line-height: 1.7;
     margin-bottom: 20px;
+    color: #6c757d;
 }
+
+body.dark-mode .item p {
+    color: #adb5bd;
+}
+
 
 .actions {
   text-align: end;
@@ -65,7 +66,7 @@ main li img {
 
 .actions a {
   text-decoration: none;
-  color: var(--action-color);
+  color: var(--primary-red);
   font-weight: 600;
   padding: 8px 12px;
   border-radius: 5px;
@@ -73,10 +74,6 @@ main li img {
   transition: background-color 0.2s;
 }
 
-body.dark-mode .actions a {
-    color: var(--action-color-dark);
-}
-
 .actions a:hover {
-  background-color: rgba(0, 123, 255, 0.1);
+  background-color: rgba(217, 32, 39, 0.1);
 }
